trunk/Archive2/91/e9e5e7a96c459f/output
main.cpp:2:6: error: invalid digit 'C' in octal constant
00251CF0  push        ecx  
     ^
main.cpp:7:6: error: invalid digit 'C' in octal constant
00251CF4  mov         edx,3E8h  
     ^
main.cpp:10:6: error: invalid digit 'D' in octal constant
00251D00  xor         ecx,ecx  
     ^
main.cpp:10:23: error: use of undeclared identifier 'ecx'
00251D00  xor         ecx,ecx  
                      ^
main.cpp:10:27: error: use of undeclared identifier 'ecx'
00251D00  xor         ecx,ecx  
                          ^
main.cpp:29:6: error: invalid digit 'D' in octal constant
00251D37  call        std::basic_ostream<char,std::char_traits<char> >::operator<< (0252070h)  
     ^
main.cpp:32:1: error: expected unqualified-id
00251D3D  ret  
^
main.cpp:74:1: error: expected unqualified-id
00251D96  ret  
^
8 errors generated.
